--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,91 @@
 AtomicCards.json
 AllPrintings.json
 CardTypes.json
+textdetector/box_images/box1.jpg
+textdetector/box_images/box10.jpg
+textdetector/box_images/box9.jpg
+textdetector/box_images/box88.jpg
+textdetector/box_images/box87.jpg
+textdetector/box_images/box86.jpg
+textdetector/box_images/box85.jpg
+textdetector/box_images/box84.jpg
+textdetector/box_images/box83.jpg
+textdetector/box_images/box82.jpg
+textdetector/box_images/box81.jpg
+textdetector/box_images/box80.jpg
+textdetector/box_images/box8.jpg
+textdetector/box_images/box79.jpg
+textdetector/box_images/box78.jpg
+textdetector/box_images/box77.jpg
+textdetector/box_images/box76.jpg
+textdetector/box_images/box75.jpg
+textdetector/box_images/box74.jpg
+textdetector/box_images/box73.jpg
+textdetector/box_images/box72.jpg
+textdetector/box_images/box71.jpg
+textdetector/box_images/box70.jpg
+textdetector/box_images/box7.jpg
+textdetector/box_images/box69.jpg
+textdetector/box_images/box68.jpg
+textdetector/box_images/box67.jpg
+textdetector/box_images/box66.jpg
+textdetector/box_images/box65.jpg
+textdetector/box_images/box64.jpg
+textdetector/box_images/box63.jpg
+textdetector/box_images/box62.jpg
+textdetector/box_images/box61.jpg
+textdetector/box_images/box60.jpg
+textdetector/box_images/box6.jpg
+textdetector/box_images/box59.jpg
+textdetector/box_images/box58.jpg
+textdetector/box_images/box57.jpg
+textdetector/box_images/box56.jpg
+textdetector/box_images/box55.jpg
+textdetector/box_images/box54.jpg
+textdetector/box_images/box53.jpg
+textdetector/box_images/box52.jpg
+textdetector/box_images/box51.jpg
+textdetector/box_images/box50.jpg
+textdetector/box_images/box5.jpg
+textdetector/box_images/box49.jpg
+textdetector/box_images/box48.jpg
+textdetector/box_images/box47.jpg
+textdetector/box_images/box46.jpg
+textdetector/box_images/box45.jpg
+textdetector/box_images/box44.jpg
+textdetector/box_images/box43.jpg
+textdetector/box_images/box42.jpg
+textdetector/box_images/box41.jpg
+textdetector/box_images/box40.jpg
+textdetector/box_images/box4.jpg
+textdetector/box_images/box39.jpg
+textdetector/box_images/box38.jpg
+textdetector/box_images/box37.jpg
+textdetector/box_images/box36.jpg
+textdetector/box_images/box35.jpg
+textdetector/box_images/box34.jpg
+textdetector/box_images/box33.jpg
+textdetector/box_images/box32.jpg
+textdetector/box_images/box31.jpg
+textdetector/box_images/box30.jpg
+textdetector/box_images/box3.jpg
+textdetector/box_images/box29.jpg
+textdetector/box_images/box28.jpg
+textdetector/box_images/box27.jpg
+textdetector/box_images/box26.jpg
+textdetector/box_images/box25.jpg
+textdetector/box_images/box24.jpg
+textdetector/box_images/box23.jpg
+textdetector/box_images/box22.jpg
+textdetector/box_images/box21.jpg
+textdetector/box_images/box20.jpg
+textdetector/box_images/box2.jpg
+textdetector/box_images/box19.jpg
+textdetector/box_images/box18.jpg
+textdetector/box_images/box17.jpg
+textdetector/box_images/box16.jpg
+textdetector/box_images/box15.jpg
+textdetector/box_images/box14.jpg
+textdetector/box_images/box13.jpg
+textdetector/box_images/box12.jpg
+textdetector/box_images/box11.jpg
