--- a/.gitignore
+++ b/.gitignore
@@ -90,3 +90,13 @@ textdetector/box_images/box14.jpg
 textdetector/box_images/box13.jpg
 textdetector/box_images/box12.jpg
 textdetector/box_images/box11.jpg
+textdetector/box_images/box1_1.jpg
+textdetector/box_images/box1_10.jpg
+textdetector/box_images/box1_2.jpg
+textdetector/box_images/box1_3.jpg
+textdetector/box_images/box1_4.jpg
+textdetector/box_images/box1_5.jpg
+textdetector/box_images/box1_6.jpg
+textdetector/box_images/box1_7.jpg
+textdetector/box_images/box1_8.jpg
+textdetector/box_images/box1_9.jpg
