--- a/.gitignore
+++ b/.gitignore
@@ -970,3 +970,4 @@ textdetector/box_images/box10_3.jpg
 textdetector/box_images/box10_2.jpg
 textdetector/box_images/box10_10.jpg
 textdetector/box_images/box10_1.jpg
+textdetector/box_images/box1_cropped.jpg
