--- a/.gitignore
+++ b/.gitignore
@@ -2026,3 +2026,440 @@ textdetector/box_images/box9_19.jpg
 textdetector/box_images/box9_20.jpg
 textdetector/box_images/box9_21.jpg
 textdetector/box_images/box9_cropped.jpg
+textdetector/box_images/box100.jpg
+textdetector/box_images/box100_1.jpg
+textdetector/box_images/box100_10.jpg
+textdetector/box_images/box100_11.jpg
+textdetector/box_images/box100_12.jpg
+textdetector/box_images/box100_13.jpg
+textdetector/box_images/box100_14.jpg
+textdetector/box_images/box100_15.jpg
+textdetector/box_images/box100_16.jpg
+textdetector/box_images/box100_17.jpg
+textdetector/box_images/box100_18.jpg
+textdetector/box_images/box100_19.jpg
+textdetector/box_images/box100_2.jpg
+textdetector/box_images/box100_20.jpg
+textdetector/box_images/box100_21.jpg
+textdetector/box_images/box100_3.jpg
+textdetector/box_images/box100_4.jpg
+textdetector/box_images/box100_5.jpg
+textdetector/box_images/box100_6.jpg
+textdetector/box_images/box100_7.jpg
+textdetector/box_images/box100_8.jpg
+textdetector/box_images/box100_9.jpg
+textdetector/box_images/box100_cropped.jpg
+textdetector/box_images/box101.jpg
+textdetector/box_images/box101_1.jpg
+textdetector/box_images/box101_10.jpg
+textdetector/box_images/box101_11.jpg
+textdetector/box_images/box101_12.jpg
+textdetector/box_images/box101_13.jpg
+textdetector/box_images/box101_14.jpg
+textdetector/box_images/box101_15.jpg
+textdetector/box_images/box101_16.jpg
+textdetector/box_images/box101_17.jpg
+textdetector/box_images/box101_18.jpg
+textdetector/box_images/box101_19.jpg
+textdetector/box_images/box101_2.jpg
+textdetector/box_images/box101_20.jpg
+textdetector/box_images/box101_21.jpg
+textdetector/box_images/box101_3.jpg
+textdetector/box_images/box101_4.jpg
+textdetector/box_images/box101_5.jpg
+textdetector/box_images/box101_6.jpg
+textdetector/box_images/box101_7.jpg
+textdetector/box_images/box101_8.jpg
+textdetector/box_images/box101_9.jpg
+textdetector/box_images/box101_cropped.jpg
+textdetector/box_images/box102.jpg
+textdetector/box_images/box102_1.jpg
+textdetector/box_images/box102_10.jpg
+textdetector/box_images/box102_11.jpg
+textdetector/box_images/box102_12.jpg
+textdetector/box_images/box102_13.jpg
+textdetector/box_images/box102_14.jpg
+textdetector/box_images/box102_15.jpg
+textdetector/box_images/box102_16.jpg
+textdetector/box_images/box102_17.jpg
+textdetector/box_images/box102_18.jpg
+textdetector/box_images/box102_19.jpg
+textdetector/box_images/box102_2.jpg
+textdetector/box_images/box102_20.jpg
+textdetector/box_images/box102_21.jpg
+textdetector/box_images/box102_3.jpg
+textdetector/box_images/box102_4.jpg
+textdetector/box_images/box102_5.jpg
+textdetector/box_images/box102_6.jpg
+textdetector/box_images/box102_7.jpg
+textdetector/box_images/box102_8.jpg
+textdetector/box_images/box102_9.jpg
+textdetector/box_images/box102_cropped.jpg
+textdetector/box_images/box103.jpg
+textdetector/box_images/box103_1.jpg
+textdetector/box_images/box103_10.jpg
+textdetector/box_images/box103_11.jpg
+textdetector/box_images/box103_12.jpg
+textdetector/box_images/box103_13.jpg
+textdetector/box_images/box103_14.jpg
+textdetector/box_images/box103_15.jpg
+textdetector/box_images/box103_16.jpg
+textdetector/box_images/box103_17.jpg
+textdetector/box_images/box103_18.jpg
+textdetector/box_images/box103_19.jpg
+textdetector/box_images/box103_2.jpg
+textdetector/box_images/box103_20.jpg
+textdetector/box_images/box103_21.jpg
+textdetector/box_images/box103_3.jpg
+textdetector/box_images/box103_4.jpg
+textdetector/box_images/box103_5.jpg
+textdetector/box_images/box103_6.jpg
+textdetector/box_images/box103_7.jpg
+textdetector/box_images/box103_8.jpg
+textdetector/box_images/box103_9.jpg
+textdetector/box_images/box103_cropped.jpg
+textdetector/box_images/box104.jpg
+textdetector/box_images/box104_1.jpg
+textdetector/box_images/box104_10.jpg
+textdetector/box_images/box104_11.jpg
+textdetector/box_images/box104_12.jpg
+textdetector/box_images/box104_13.jpg
+textdetector/box_images/box104_14.jpg
+textdetector/box_images/box104_15.jpg
+textdetector/box_images/box104_16.jpg
+textdetector/box_images/box104_17.jpg
+textdetector/box_images/box104_18.jpg
+textdetector/box_images/box104_19.jpg
+textdetector/box_images/box104_2.jpg
+textdetector/box_images/box104_20.jpg
+textdetector/box_images/box104_21.jpg
+textdetector/box_images/box104_3.jpg
+textdetector/box_images/box104_4.jpg
+textdetector/box_images/box104_5.jpg
+textdetector/box_images/box104_6.jpg
+textdetector/box_images/box104_7.jpg
+textdetector/box_images/box104_8.jpg
+textdetector/box_images/box104_9.jpg
+textdetector/box_images/box104_cropped.jpg
+textdetector/box_images/box105.jpg
+textdetector/box_images/box105_1.jpg
+textdetector/box_images/box105_10.jpg
+textdetector/box_images/box105_11.jpg
+textdetector/box_images/box105_12.jpg
+textdetector/box_images/box105_13.jpg
+textdetector/box_images/box105_14.jpg
+textdetector/box_images/box105_15.jpg
+textdetector/box_images/box105_16.jpg
+textdetector/box_images/box105_17.jpg
+textdetector/box_images/box105_18.jpg
+textdetector/box_images/box105_19.jpg
+textdetector/box_images/box105_2.jpg
+textdetector/box_images/box105_20.jpg
+textdetector/box_images/box105_21.jpg
+textdetector/box_images/box105_3.jpg
+textdetector/box_images/box105_4.jpg
+textdetector/box_images/box105_5.jpg
+textdetector/box_images/box105_6.jpg
+textdetector/box_images/box105_7.jpg
+textdetector/box_images/box105_8.jpg
+textdetector/box_images/box105_9.jpg
+textdetector/box_images/box105_cropped.jpg
+textdetector/box_images/box106.jpg
+textdetector/box_images/box106_1.jpg
+textdetector/box_images/box106_10.jpg
+textdetector/box_images/box106_11.jpg
+textdetector/box_images/box106_12.jpg
+textdetector/box_images/box106_13.jpg
+textdetector/box_images/box106_14.jpg
+textdetector/box_images/box106_15.jpg
+textdetector/box_images/box106_16.jpg
+textdetector/box_images/box106_17.jpg
+textdetector/box_images/box106_18.jpg
+textdetector/box_images/box106_19.jpg
+textdetector/box_images/box106_2.jpg
+textdetector/box_images/box106_20.jpg
+textdetector/box_images/box106_21.jpg
+textdetector/box_images/box106_3.jpg
+textdetector/box_images/box106_4.jpg
+textdetector/box_images/box106_5.jpg
+textdetector/box_images/box106_6.jpg
+textdetector/box_images/box106_7.jpg
+textdetector/box_images/box106_8.jpg
+textdetector/box_images/box106_9.jpg
+textdetector/box_images/box106_cropped.jpg
+textdetector/box_images/box107.jpg
+textdetector/box_images/box107_1.jpg
+textdetector/box_images/box107_10.jpg
+textdetector/box_images/box107_11.jpg
+textdetector/box_images/box107_12.jpg
+textdetector/box_images/box107_13.jpg
+textdetector/box_images/box107_14.jpg
+textdetector/box_images/box107_15.jpg
+textdetector/box_images/box107_16.jpg
+textdetector/box_images/box107_17.jpg
+textdetector/box_images/box107_18.jpg
+textdetector/box_images/box107_19.jpg
+textdetector/box_images/box107_2.jpg
+textdetector/box_images/box107_20.jpg
+textdetector/box_images/box107_21.jpg
+textdetector/box_images/box107_3.jpg
+textdetector/box_images/box107_4.jpg
+textdetector/box_images/box107_5.jpg
+textdetector/box_images/box107_6.jpg
+textdetector/box_images/box107_7.jpg
+textdetector/box_images/box107_8.jpg
+textdetector/box_images/box107_9.jpg
+textdetector/box_images/box107_cropped.jpg
+textdetector/box_images/box89.jpg
+textdetector/box_images/box89_1.jpg
+textdetector/box_images/box89_10.jpg
+textdetector/box_images/box89_11.jpg
+textdetector/box_images/box89_12.jpg
+textdetector/box_images/box89_13.jpg
+textdetector/box_images/box89_14.jpg
+textdetector/box_images/box89_15.jpg
+textdetector/box_images/box89_16.jpg
+textdetector/box_images/box89_17.jpg
+textdetector/box_images/box89_18.jpg
+textdetector/box_images/box89_19.jpg
+textdetector/box_images/box89_2.jpg
+textdetector/box_images/box89_20.jpg
+textdetector/box_images/box89_21.jpg
+textdetector/box_images/box89_3.jpg
+textdetector/box_images/box89_4.jpg
+textdetector/box_images/box89_5.jpg
+textdetector/box_images/box89_6.jpg
+textdetector/box_images/box89_7.jpg
+textdetector/box_images/box89_8.jpg
+textdetector/box_images/box89_9.jpg
+textdetector/box_images/box89_cropped.jpg
+textdetector/box_images/box90.jpg
+textdetector/box_images/box90_1.jpg
+textdetector/box_images/box90_10.jpg
+textdetector/box_images/box90_11.jpg
+textdetector/box_images/box90_12.jpg
+textdetector/box_images/box90_13.jpg
+textdetector/box_images/box90_14.jpg
+textdetector/box_images/box90_15.jpg
+textdetector/box_images/box90_16.jpg
+textdetector/box_images/box90_17.jpg
+textdetector/box_images/box90_18.jpg
+textdetector/box_images/box90_19.jpg
+textdetector/box_images/box90_2.jpg
+textdetector/box_images/box90_20.jpg
+textdetector/box_images/box90_21.jpg
+textdetector/box_images/box90_3.jpg
+textdetector/box_images/box90_4.jpg
+textdetector/box_images/box90_5.jpg
+textdetector/box_images/box90_6.jpg
+textdetector/box_images/box90_7.jpg
+textdetector/box_images/box90_8.jpg
+textdetector/box_images/box90_9.jpg
+textdetector/box_images/box90_cropped.jpg
+textdetector/box_images/box91.jpg
+textdetector/box_images/box91_1.jpg
+textdetector/box_images/box91_10.jpg
+textdetector/box_images/box91_11.jpg
+textdetector/box_images/box91_12.jpg
+textdetector/box_images/box91_13.jpg
+textdetector/box_images/box91_14.jpg
+textdetector/box_images/box91_15.jpg
+textdetector/box_images/box91_16.jpg
+textdetector/box_images/box91_17.jpg
+textdetector/box_images/box91_18.jpg
+textdetector/box_images/box91_19.jpg
+textdetector/box_images/box91_2.jpg
+textdetector/box_images/box91_20.jpg
+textdetector/box_images/box91_21.jpg
+textdetector/box_images/box91_3.jpg
+textdetector/box_images/box91_4.jpg
+textdetector/box_images/box91_5.jpg
+textdetector/box_images/box91_6.jpg
+textdetector/box_images/box91_7.jpg
+textdetector/box_images/box91_8.jpg
+textdetector/box_images/box91_9.jpg
+textdetector/box_images/box91_cropped.jpg
+textdetector/box_images/box92.jpg
+textdetector/box_images/box92_1.jpg
+textdetector/box_images/box92_10.jpg
+textdetector/box_images/box92_11.jpg
+textdetector/box_images/box92_12.jpg
+textdetector/box_images/box92_13.jpg
+textdetector/box_images/box92_14.jpg
+textdetector/box_images/box92_15.jpg
+textdetector/box_images/box92_16.jpg
+textdetector/box_images/box92_17.jpg
+textdetector/box_images/box92_18.jpg
+textdetector/box_images/box92_19.jpg
+textdetector/box_images/box92_2.jpg
+textdetector/box_images/box92_20.jpg
+textdetector/box_images/box92_21.jpg
+textdetector/box_images/box92_3.jpg
+textdetector/box_images/box92_4.jpg
+textdetector/box_images/box92_5.jpg
+textdetector/box_images/box92_6.jpg
+textdetector/box_images/box92_7.jpg
+textdetector/box_images/box92_8.jpg
+textdetector/box_images/box92_9.jpg
+textdetector/box_images/box92_cropped.jpg
+textdetector/box_images/box93.jpg
+textdetector/box_images/box93_1.jpg
+textdetector/box_images/box93_10.jpg
+textdetector/box_images/box93_11.jpg
+textdetector/box_images/box93_12.jpg
+textdetector/box_images/box93_13.jpg
+textdetector/box_images/box93_14.jpg
+textdetector/box_images/box93_15.jpg
+textdetector/box_images/box93_16.jpg
+textdetector/box_images/box93_17.jpg
+textdetector/box_images/box93_18.jpg
+textdetector/box_images/box93_19.jpg
+textdetector/box_images/box93_2.jpg
+textdetector/box_images/box93_20.jpg
+textdetector/box_images/box93_21.jpg
+textdetector/box_images/box93_3.jpg
+textdetector/box_images/box93_4.jpg
+textdetector/box_images/box93_5.jpg
+textdetector/box_images/box93_6.jpg
+textdetector/box_images/box93_7.jpg
+textdetector/box_images/box93_8.jpg
+textdetector/box_images/box93_9.jpg
+textdetector/box_images/box93_cropped.jpg
+textdetector/box_images/box94.jpg
+textdetector/box_images/box94_1.jpg
+textdetector/box_images/box94_10.jpg
+textdetector/box_images/box94_11.jpg
+textdetector/box_images/box94_12.jpg
+textdetector/box_images/box94_13.jpg
+textdetector/box_images/box94_14.jpg
+textdetector/box_images/box94_15.jpg
+textdetector/box_images/box94_16.jpg
+textdetector/box_images/box94_17.jpg
+textdetector/box_images/box94_18.jpg
+textdetector/box_images/box94_19.jpg
+textdetector/box_images/box94_2.jpg
+textdetector/box_images/box94_20.jpg
+textdetector/box_images/box94_21.jpg
+textdetector/box_images/box94_3.jpg
+textdetector/box_images/box94_4.jpg
+textdetector/box_images/box94_5.jpg
+textdetector/box_images/box94_6.jpg
+textdetector/box_images/box94_7.jpg
+textdetector/box_images/box94_8.jpg
+textdetector/box_images/box94_9.jpg
+textdetector/box_images/box94_cropped.jpg
+textdetector/box_images/box95.jpg
+textdetector/box_images/box95_1.jpg
+textdetector/box_images/box95_10.jpg
+textdetector/box_images/box95_11.jpg
+textdetector/box_images/box95_12.jpg
+textdetector/box_images/box95_13.jpg
+textdetector/box_images/box95_14.jpg
+textdetector/box_images/box95_15.jpg
+textdetector/box_images/box95_16.jpg
+textdetector/box_images/box95_17.jpg
+textdetector/box_images/box95_18.jpg
+textdetector/box_images/box95_19.jpg
+textdetector/box_images/box95_2.jpg
+textdetector/box_images/box95_20.jpg
+textdetector/box_images/box95_21.jpg
+textdetector/box_images/box95_3.jpg
+textdetector/box_images/box95_4.jpg
+textdetector/box_images/box95_5.jpg
+textdetector/box_images/box95_6.jpg
+textdetector/box_images/box95_7.jpg
+textdetector/box_images/box95_8.jpg
+textdetector/box_images/box95_9.jpg
+textdetector/box_images/box95_cropped.jpg
+textdetector/box_images/box96.jpg
+textdetector/box_images/box96_1.jpg
+textdetector/box_images/box96_10.jpg
+textdetector/box_images/box96_11.jpg
+textdetector/box_images/box96_12.jpg
+textdetector/box_images/box96_13.jpg
+textdetector/box_images/box96_14.jpg
+textdetector/box_images/box96_15.jpg
+textdetector/box_images/box96_16.jpg
+textdetector/box_images/box96_17.jpg
+textdetector/box_images/box96_18.jpg
+textdetector/box_images/box96_19.jpg
+textdetector/box_images/box96_2.jpg
+textdetector/box_images/box96_20.jpg
+textdetector/box_images/box96_21.jpg
+textdetector/box_images/box96_3.jpg
+textdetector/box_images/box96_4.jpg
+textdetector/box_images/box96_5.jpg
+textdetector/box_images/box96_6.jpg
+textdetector/box_images/box96_7.jpg
+textdetector/box_images/box96_8.jpg
+textdetector/box_images/box96_9.jpg
+textdetector/box_images/box96_cropped.jpg
+textdetector/box_images/box97.jpg
+textdetector/box_images/box97_1.jpg
+textdetector/box_images/box97_10.jpg
+textdetector/box_images/box97_11.jpg
+textdetector/box_images/box97_12.jpg
+textdetector/box_images/box97_13.jpg
+textdetector/box_images/box97_14.jpg
+textdetector/box_images/box97_15.jpg
+textdetector/box_images/box97_16.jpg
+textdetector/box_images/box97_17.jpg
+textdetector/box_images/box97_18.jpg
+textdetector/box_images/box97_19.jpg
+textdetector/box_images/box97_2.jpg
+textdetector/box_images/box97_20.jpg
+textdetector/box_images/box97_21.jpg
+textdetector/box_images/box97_3.jpg
+textdetector/box_images/box97_4.jpg
+textdetector/box_images/box97_5.jpg
+textdetector/box_images/box97_6.jpg
+textdetector/box_images/box97_7.jpg
+textdetector/box_images/box97_8.jpg
+textdetector/box_images/box97_9.jpg
+textdetector/box_images/box97_cropped.jpg
+textdetector/box_images/box98.jpg
+textdetector/box_images/box98_1.jpg
+textdetector/box_images/box98_10.jpg
+textdetector/box_images/box98_11.jpg
+textdetector/box_images/box98_12.jpg
+textdetector/box_images/box98_13.jpg
+textdetector/box_images/box98_14.jpg
+textdetector/box_images/box98_15.jpg
+textdetector/box_images/box98_16.jpg
+textdetector/box_images/box98_17.jpg
+textdetector/box_images/box98_18.jpg
+textdetector/box_images/box98_19.jpg
+textdetector/box_images/box98_2.jpg
+textdetector/box_images/box98_20.jpg
+textdetector/box_images/box98_21.jpg
+textdetector/box_images/box98_3.jpg
+textdetector/box_images/box98_4.jpg
+textdetector/box_images/box98_5.jpg
+textdetector/box_images/box98_6.jpg
+textdetector/box_images/box98_7.jpg
+textdetector/box_images/box98_8.jpg
+textdetector/box_images/box98_9.jpg
+textdetector/box_images/box98_cropped.jpg
+textdetector/box_images/box99.jpg
+textdetector/box_images/box99_1.jpg
+textdetector/box_images/box99_10.jpg
+textdetector/box_images/box99_11.jpg
+textdetector/box_images/box99_12.jpg
+textdetector/box_images/box99_13.jpg
+textdetector/box_images/box99_14.jpg
+textdetector/box_images/box99_15.jpg
+textdetector/box_images/box99_16.jpg
+textdetector/box_images/box99_17.jpg
+textdetector/box_images/box99_18.jpg
+textdetector/box_images/box99_19.jpg
+textdetector/box_images/box99_2.jpg
+textdetector/box_images/box99_20.jpg
+textdetector/box_images/box99_21.jpg
+textdetector/box_images/box99_3.jpg
+textdetector/box_images/box99_4.jpg
+textdetector/box_images/box99_5.jpg
+textdetector/box_images/box99_6.jpg
+textdetector/box_images/box99_7.jpg
+textdetector/box_images/box99_8.jpg
+textdetector/box_images/box99_9.jpg
+textdetector/box_images/box99_cropped.jpg
