--- a/.gitignore
+++ b/.gitignore
@@ -2463,3 +2463,5 @@ textdetector/box_images/box99_7.jpg
 textdetector/box_images/box99_8.jpg
 textdetector/box_images/box99_9.jpg
 textdetector/box_images/box99_cropped.jpg
+textdetector/AtomicCards-old.json
+textdetector/AtomicCards-new.json
