--- a/.gitignore
+++ b/.gitignore
@@ -2466,3 +2466,4 @@ textdetector/box_images/box99_cropped.jpg
 textdetector/AtomicCards-old.json
 textdetector/AtomicCards-new.json
 /textdetector/box_images_archive
+/textdetector/box_images
