--- a/.gitignore
+++ b/.gitignore
@@ -2467,3 +2467,4 @@ textdetector/AtomicCards-old.json
 textdetector/AtomicCards-new.json
 /textdetector/box_images_archive
 /textdetector/box_images
+/textdetector/box_images_rotational_list_small
